[package]
name = "serde_partiql_test"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
path = "test.rs"

[dependencies]
serde_partiql = { path = "../..", default-features = false }

[features]
default = ["std"]
std = ["serde_partiql/std"]
alloc = ["serde_partiql/alloc"]
preserve_order = ["serde_partiql/preserve_order"]
arbitrary_precision = ["serde_partiql/arbitrary_precision"]
raw_value = ["serde_partiql/raw_value"]
unbounded_depth = ["serde_partiql/unbounded_depth"]
